5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1771_1183.log
== TEST (2019-05-22 21:52:58) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
		
print(m)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:53:11) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
		
print(m)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:55:16) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m-zeros(m)
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:55:21) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m-zeros(m)
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:55:27) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:59:11) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x)):
	if(x[b]>0):
		m[v]=m[v]+x[b]0
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)		
	 	  		
		



-- ERROR:
File "XXXX", line 18
    while(j<(size(x)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:59:40) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>0):
		m[v]=m[v]+x[b]0
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)		
	 	  		
		



-- ERROR:
File "XXXX", line 20
    m[v]=m[v]+x[b]0
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:59:47) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)		
	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:00:38) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)		
	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:00:43) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)		
	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:01:01) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)		
	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 22:01:13) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)		
	 	  		
		



-- EXECUTION TIME:
0.444188
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 3. 5.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18. 32. 14. 25.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:01:18) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)		
	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:01:34) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)		
	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 22:01:40) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)		
	 	  		
		



-- EXECUTION TIME:
0.361578
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 3. 5.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18. 32. 14. 25.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:01:41) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)		
	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:01:58) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)		
	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:02:10) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]=>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]=>0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)		
	 	  		
		



-- ERROR:
File "XXXX", line 7
    if(x[f]=>0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:02:29) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>=0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>=0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)		
	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 22:02:40) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>=0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>=0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)		
	 	  		
		



-- EXECUTION TIME:
0.337443
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 3. 5.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18. 32. 14. 25.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:02:55) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>=0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>=0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)		
	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:08:29) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>=0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>=0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m,dtype=int)
print()
	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:08:46) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>=0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>=0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m,dtype=int)

	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:12:30) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>=0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>=0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(array([5,6,8]))

	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:12:41) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>=0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>=0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(array([5,6,8]))

	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:13:00) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>=0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>=0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(array([5,6,8]))

	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:15:22) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>=0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>=0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)

	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:22:41) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>=0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>=0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m,dtype=int)

	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:22:46) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>=0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>=0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m,dtype=int)

	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 22:23:43) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>=0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>=0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)

	 	  		
		



-- EXECUTION TIME:
0.572243
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 3. 5.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18. 32. 14. 25.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:37:04) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)

	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:37:33) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m,dtype=int)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)

	 	  		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 22:37:44) 
-- CODE:
from numpy import*
x=array(eval(input("Digite Numeros: ")))
y=0
f=0
m=0
while(y<(size(x))):
	if(x[f]>0):
		m=m+1
		f=f+1
		y=y+1
	else:
		f=f+1
		y=y+1
m=zeros(m,dtype=int)
j=0
b=0
v=0
while(j<(size(x))):
	if(x[b]>0):
		m[v]=m[v]+x[b]
		b=b+1
		v=v+1
		j=j+1
	else:
		b=b+1
		j=j+1
print(m)

	 	  		
		



-- EXECUTION TIME:
1.24087
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
